<resources>
    // Login Screen
    <string name="app_name">RunCore Prototype</string>
    <string name="strgUsernameHint">Username</string>
    <string name="strgPasswordHint">Password</string>
    <string name="strgButtonLogin">Login</string>

    <string name="errMsgLogin">Invalid username or password. Please retry.</string>

    \\WorkoutScreen
    <string name="strgButtonLogout">Logout</string>
    <string name="strgButtonShoeTracker">Shoe Tracker</string>
    <string name="strgButtonStart">Start Run</string>
    <string name="strgTxtCurrentShoes">Current Shoes: None</string>

    \\TrackerScreen
    <string name="strgButtonBack">Back</string>
    <string name="strgButtonShoeSave">Save Settings</string>
    <string name="strgEnterShoeName">Enter Shoe Name</string>
    <string name="strgEnterShoeMileage">Enter Mileage</string>

    <string name="strgTxtSavedShoes">Saved Shoes</string>
    <string name="strgTxtShoeName">Shoe Name:</string>
    <string name="strgTxtShoeMileage">Current Mileage:</string>
    <string name="strgTxtShoeSetup">Edit/Setup Tracker</string>

</resources>
