<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShoeTracker">

    <Button
        android:id="@+id/idButtonShoeSave"
        android:layout_width="219dp"
        android:layout_height="62dp"
        android:layout_marginTop="36dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/strgButtonShoeSave"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEnterShoeMileage"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/idButtonBack1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/strgButtonBack"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idEnterShoeName"
        android:layout_width="322dp"
        android:layout_height="52dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/strgEnterShoeName"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTxtSetup" />

    <EditText
        android:id="@+id/idEnterShoeMileage"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/strgEnterShoeMileage"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEnterShoeName" />

    <TextView
        android:id="@+id/idTxtInfoShoeName"
        android:layout_width="133dp"
        android:layout_height="35dp"
        android:layout_marginTop="116dp"
        android:gravity="center_vertical"
        android:text="@string/strgTxtShoeName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idDisplayShoeName"
        android:layout_width="232dp"
        android:layout_height="36dp"
        android:layout_marginTop="116dp"
        android:gravity="right|center_vertical"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idDisplayShoeMileage"
        android:layout_width="188dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:gravity="right|center_vertical"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idDisplayShoeName" />

    <TextView
        android:id="@+id/idTxtInfoShoeMileage"
        android:layout_width="185dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:text="@string/strgTxtShoeMileage"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTxtInfoShoeName" />

    <TextView
        android:id="@+id/idTxtSetup"
        android:layout_width="328dp"
        android:layout_height="37dp"
        android:layout_marginTop="324dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/strgTxtShoeSetup"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>