<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#171616"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/idEnterUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="#A5FFFFFF"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/strgUsernameHint"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idEnterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="#A7FFFFFF"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/strgPasswordHint"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEnterUsername" />

    <Button
        android:id="@+id/idButtonLogin"
        android:layout_width="114dp"
        android:layout_height="52dp"
        android:layout_marginTop="60dp"
        android:background="#FF5722"
        android:text="@string/strgButtonLogin"
        android:textColor="#A7FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEnterPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>